build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt
See file:///C:/Users/andy/OneDrive/Desktop/frc20/frc20/Test/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramDebugExecutableFrcUserProgramCpp.
compiling BaseFunction.cpp successful.

compiling Robot.cpp failed.
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp: In member function 'virtual void apesofwrath::Robot::RobotInit()':
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:27:24: error: no matching function for call to 'ctre::phoenix::motorcontrol::can::TalonFX::Follow(ctre::phoenix::motorcontrol::can::TalonFX**)'
   talon2->Follow(&talon);
                        ^
In file included from C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseTalon.h:7:0,
                 from C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/TalonFX.h:7,
                 from C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/Phoenix.h:20,
                 from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\include/Robot.h:15,
                 from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:8:
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseMotorController.h:2210:11: note: candidate: void ctre::phoenix::motorcontrol::can::BaseMotorController::Follow(ctre::phoenix::motorcontrol::IMotorController&, ctre::phoenix::motorcontrol::FollowerType)
      void Follow(IMotorController& masterToFollow, ctre::phoenix::motorcontrol::FollowerType followerType);
           ^~~~~~
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseMotorController.h:2210:11: note:   candidate expects 2 arguments, 1 provided
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseMotorController.h:2216:19: note: candidate: virtual void ctre::phoenix::motorcontrol::can::BaseMotorController::Follow(ctre::phoenix::motorcontrol::IMotorController&)
      virtual void Follow(IMotorController& masterToFollow);
                   ^~~~~~
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseMotorController.h:2216:19: note:   no known conversion for argument 1 from 'ctre::phoenix::motorcontrol::can::TalonFX**' to 'ctre::phoenix::motorcontrol::IMotorController&'
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:28:24: error: no matching function for call to 'ctre::phoenix::motorcontrol::can::TalonFX::Follow(ctre::phoenix::motorcontrol::can::TalonFX**)'
   talon3->Follow(&talon);
                        ^
In file included from C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseTalon.h:7:0,
                 from C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/TalonFX.h:7,
                 from C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/Phoenix.h:20,
                 from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\include/Robot.h:15,
                 from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:8:
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseMotorController.h:2210:11: note: candidate: void ctre::phoenix::motorcontrol::can::BaseMotorController::Follow(ctre::phoenix::motorcontrol::IMotorController&, ctre::phoenix::motorcontrol::FollowerType)
      void Follow(IMotorController& masterToFollow, ctre::phoenix::motorcontrol::FollowerType followerType);
           ^~~~~~
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseMotorController.h:2210:11: note:   candidate expects 2 arguments, 1 provided
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseMotorController.h:2216:19: note: candidate: virtual void ctre::phoenix::motorcontrol::can::BaseMotorController::Follow(ctre::phoenix::motorcontrol::IMotorController&)
      virtual void Follow(IMotorController& masterToFollow);
                   ^~~~~~
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseMotorController.h:2216:19: note:   no known conversion for argument 1 from 'ctre::phoenix::motorcontrol::can::TalonFX**' to 'ctre::phoenix::motorcontrol::IMotorController&'
C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:29:24: error: no matching function for call to 'ctre::phoenix::motorcontrol::can::TalonFX::Follow(ctre::phoenix::motorcontrol::can::TalonFX**)'
   talon4->Follow(&talon);
                        ^
In file included from C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseTalon.h:7:0,
                 from C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/TalonFX.h:7,
                 from C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/Phoenix.h:20,
                 from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\include/Robot.h:15,
                 from C:\Users\andy\OneDrive\Desktop\frc20\frc20\Test\src\main\cpp\Robot.cpp:8:
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseMotorController.h:2210:11: note: candidate: void ctre::phoenix::motorcontrol::can::BaseMotorController::Follow(ctre::phoenix::motorcontrol::IMotorController&, ctre::phoenix::motorcontrol::FollowerType)
      void Follow(IMotorController& masterToFollow, ctre::phoenix::motorcontrol::FollowerType followerType);
           ^~~~~~
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseMotorController.h:2210:11: note:   candidate expects 2 arguments, 1 provided
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseMotorController.h:2216:19: note: candidate: virtual void ctre::phoenix::motorcontrol::can::BaseMotorController::Follow(ctre::phoenix::motorcontrol::IMotorController&)
      virtual void Follow(IMotorController& masterToFollow);
                   ^~~~~~
C:\Users\andy\.gradle\caches\transforms-2\files-2.1\0aaf3cf917244c0ac32ba6be7873ad12\api-cpp-5.17.3-headers/ctre/phoenix/motorcontrol/can/BaseMotorController.h:2216:19: note:   no known conversion for argument 1 from 'ctre::phoenix::motorcontrol::can::TalonFX**' to 'ctre::phoenix::motorcontrol::IMotorController&'

compiling ExampleFunction.cpp successful.

Finished compileFrcUserProgramDebugExecutableFrcUserProgramCpp, see full log file:///C:/Users/andy/OneDrive/Desktop/frc20/frc20/Test/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt.
